Popup Z-index bug fixed

--- a/extension/chrome/react-refactor/csgotrader.app-extension/src/assets/styles/components/_custom-modal.scss
+++ b/extension/chrome/react-refactor/csgotrader.app-extension/src/assets/styles/components/_custom-modal.scss
@@ -6,6 +6,7 @@
   position: fixed;
   left: 0;
   top: 0;
+  z-index: 100;
 
   .custom-modal {
     width: 500px;
